[gd_scene load_steps=16 format=2]

[ext_resource path="res://Fonts/80-Font.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scripts/Sheet.gd" type="Script" id=2]
[ext_resource path="res://SheetTemplates/normal.tres" type="Resource" id=3]
[ext_resource path="res://Prefabs/ValueShower.tscn" type="PackedScene" id=4]
[ext_resource path="res://Textures/fullscreen.png" type="Texture" id=5]

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.423529, 0.423529, 0.423529, 1 )

[sub_resource type="StyleBoxFlat" id=11]

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.737255, 0.737255, 0.737255, 1 )
corner_radius_bottom_right = 50

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.470588, 0.470588, 0.470588, 1 )
corner_radius_bottom_right = 50

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.92549, 0.109804, 0.141176, 1 )
corner_radius_bottom_right = 50
expand_margin_left = 1.0
expand_margin_right = 1.0
expand_margin_top = 1.0
expand_margin_bottom = 1.0

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.92549, 0.109804, 0.141176, 1 )
corner_radius_bottom_right = 50

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0.737255, 0.737255, 0.737255, 1 )
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 0.470588, 0.470588, 0.470588, 1 )
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 0.109804, 0.52549, 0.92549, 1 )
corner_radius_bottom_left = 50
expand_margin_left = 1.0
expand_margin_right = 1.0
expand_margin_top = 1.0
expand_margin_bottom = 1.0

[sub_resource type="StyleBoxFlat" id=19]
bg_color = Color( 0.109804, 0.52549, 0.92549, 1 )
corner_radius_bottom_left = 50

[node name="QuixxPaperSheet" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 2
script = ExtResource( 2 )
railTemplate = ExtResource( 3 )

[node name="Background" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 10 )

[node name="InformationArea" type="Panel" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -125.0
rect_min_size = Vector2( 0, 125 )
size_flags_horizontal = 2
size_flags_vertical = 2
custom_styles/panel = SubResource( 11 )

[node name="ShowerInfo" type="HBoxContainer" parent="InformationArea"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 110.0
rect_scale = Vector2( 1, -1 )
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="EndValue" parent="InformationArea/ShowerInfo" instance=ExtResource( 4 )]
margin_right = 160.0
rect_min_size = Vector2( 160, 110 )
theme = null

[node name="ValueShower" parent="InformationArea/ShowerInfo/EndValue" index="0"]
margin_left = -75.0
margin_top = 50.0
margin_right = 75.0
margin_bottom = 150.0
rect_min_size = Vector2( 150, 100 )
rect_scale = Vector2( 1, -1 )
theme = null

[node name="WorkArea" parent="InformationArea/ShowerInfo/EndValue/ValueShower" index="0"]
theme = null

[node name="Label" parent="InformationArea/ShowerInfo/EndValue/ValueShower/WorkArea" index="0"]
theme = null

[node name="Back" type="Button" parent="InformationArea/ShowerInfo"]
margin_left = 164.0
margin_right = 274.0
margin_bottom = 110.0
rect_min_size = Vector2( 110, 0 )
rect_pivot_offset = Vector2( 1146, 259 )
size_flags_horizontal = 9
size_flags_vertical = 9
custom_fonts/font = ExtResource( 1 )
custom_styles/hover = SubResource( 12 )
custom_styles/pressed = SubResource( 13 )
custom_styles/focus = SubResource( 14 )
custom_styles/normal = SubResource( 15 )
text = "<"
icon_align = 1
expand_icon = true

[node name="Fullscreen" type="Button" parent="InformationArea/ShowerInfo"]
visible = false
margin_left = 278.0
margin_right = 388.0
margin_bottom = 110.0
rect_min_size = Vector2( 110, 0 )
rect_pivot_offset = Vector2( 1146, 259 )
size_flags_horizontal = 9
size_flags_vertical = 9
custom_fonts/font = ExtResource( 1 )
custom_styles/hover = SubResource( 16 )
custom_styles/pressed = SubResource( 17 )
custom_styles/focus = SubResource( 18 )
custom_styles/normal = SubResource( 19 )
icon = ExtResource( 5 )
expand_icon = true

[node name="Rails" type="VBoxContainer" parent="."]
anchor_top = 0.018
anchor_right = 1.0
anchor_bottom = 0.018
margin_top = 0.167999
margin_bottom = 0.167999
custom_constants/separation = 16

[connection signal="pressed" from="InformationArea/ShowerInfo/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="InformationArea/ShowerInfo/Fullscreen" to="." method="_on_Fullscreen_pressed"]

[editable path="InformationArea/ShowerInfo/EndValue"]
